# docs/swagger.json
@@ -30,6 +30,7 @@
                 "tags": [
                     "Driver/Replenish"
                 ],
+                "summary": "场站信息",
                 "parameters": [
                     {
                         "description": "传入进行该操作时的司机地理位置信息，Address为可选项,其余为必填项",
@@ -51,7 +52,49 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "onject"
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/dr/factory/cart": {
+            "post": {
+                "description": "\"传入查看附近场站信息获取到的所有场站距离信息，要打开购物车必须先进入场站界面“",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver/Replenish"
+                ],
+                "summary": "购物车界面",
+                "parameters": [
+                    {
+                        "description": "附近场站信息，已经获取了，打包后直接传入",
+                        "name": "DistanceInfos",
+                        "in": "body",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/response.FactoryDistanceInfo"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/response.CartResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
                         }
                     }
                 }
@@ -91,7 +134,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "onject"
+                            "$ref": "#/definitions/response.Response"
                         }
                     }
                 }
@@ -126,7 +169,7 @@
                 }
             }
         },
-        "/dr/infos/device": {
+        "/dr/infos/devices": {
             "get": {
                 "description": "获取激活设备信息",
                 "consumes": [
@@ -254,7 +297,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "onject"
+                            "$ref": "#/definitions/response.Response"
                         }
                     }
                 }
@@ -300,44 +343,6 @@
                 }
             }
         },
-        "/dr/order/cart/{id}": {
-            "get": {
-                "description": "展示所有添加的商品，点击结算，跳转到订单提交界面",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Driver/Replenish"
-                ],
-                "summary": "购物车界面",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "车主id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/response.CartResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "onject"
-                        }
-                    }
-                }
-            }
-        },
         "/dr/order/pay": {
             "put": {
                 "description": "结算",
@@ -372,7 +377,41 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "onject"
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/dr/order/replenish": {
+            "post": {
+                "description": "点击事件:传入商品信息,修改商品在购物车中的数量，选项(1：增加1件，-1：减少1件，0：清空）",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver/Replenish"
+                ],
+                "summary": "添加/移除出购物车",
+                "parameters": [
+                    {
+                        "description": "传入场站名以及ID，商品名称、型号、价格、选购数量、图片信息",
+                        "name": "productInfo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/response.ReplenishInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
                         }
                     }
                 }
@@ -412,7 +451,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "onject"
+                            "$ref": "#/definitions/response.Response"
                         }
                     }
                 }
@@ -453,6 +492,44 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/response.LoginResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/dr/userinfo": {
+            "post": {
+                "description": "传入jwt/token 获取用户信息",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "获取车主用户信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "鉴权信息",
+                        "name": "jwt",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Driver"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
                         }
                     }
                 }
@@ -1453,17 +1530,8 @@
                 "cart_id": {
                     "type": "integer"
                 },
-                "distance": {
-                    "description": "距离场站距离",
-                    "type": "integer"
-                },
                 "driver_id": {
-                    "description": "外键 Driver.Uuid",
-                    "type": "string"
-                },
-                "factory_name": {
-                    "description": "添加进购物车时自动获取",
-                    "type": "string"
+                    "type": "integer"
                 },
                 "products": {
                     "description": "存储",
@@ -1955,14 +2023,51 @@
                 }
             }
         },
+        "response.CartGroup": {
+            "type": "object",
+            "properties": {
+                "distance_info": {
+                    "$ref": "#/definitions/response.FactoryDistanceInfo"
+                },
+                "product_details": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.CartProductDetail"
+                    }
+                }
+            }
+        },
+        "response.CartProductDetail": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "pic": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
         "response.CartResponse": {
             "type": "object",
             "properties": {
-                "cart": {
-                    "$ref": "#/definitions/model.DriverCart"
-                },
                 "code": {
                     "type": "integer"
+                },
+                "groups": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.CartGroup"
+                    }
                 },
                 "msg": {
                     "type": "string"
@@ -2160,6 +2265,9 @@
                 "description": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 }
@@ -2193,6 +2301,9 @@
             "properties": {
                 "distance": {
                     "type": "string"
+                },
+                "factory_id": {
+                    "type": "integer"
                 },
                 "factory_name": {
                     "type": "string"
@@ -2479,6 +2590,33 @@
                     "type": "integer"
                 },
                 "msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.ReplenishInfo": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "description": "传入商品件数",
+                    "type": "integer"
+                },
+                "factor_id": {
+                    "type": "integer"
+                },
+                "factory_name": {
+                    "type": "string"
+                },
+                "pic": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "product_name": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
